--- a/Lattice_FPGA/SevenSegClock1.sty
+++ b/Lattice_FPGA/SevenSegClock1.sty
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!DOCTYPE strategy>
 <Strategy version="1.0" predefined="0" description="" label="Strategy1">
+    <Property name="PROP_BD_CmdLineArgs" value="" time="0"/>
     <Property name="PROP_BD_EdfHardtimer" value="Enable" time="0"/>
     <Property name="PROP_BD_EdfInBusNameConv" value="None" time="0"/>
     <Property name="PROP_BD_EdfInLibPath" value="" time="0"/>
@@ -43,9 +44,13 @@
     <Property name="PROP_BIT_SysConBitGen" value="Reset" time="0"/>
     <Property name="PROP_BIT_WaitStTimBitGen" value="5" time="0"/>
     <Property name="PROP_IOTIMING_AllSpeed" value="False" time="0"/>
+    <Property name="PROP_LST_AllowDUPMod" value="False" time="0"/>
     <Property name="PROP_LST_CarryChain" value="True" time="0"/>
     <Property name="PROP_LST_CarryChainLength" value="0" time="0"/>
     <Property name="PROP_LST_CmdLineArgs" value="" time="0"/>
+    <Property name="PROP_LST_DSPStyle" value="DSP" time="0"/>
+    <Property name="PROP_LST_DSPUtil" value="100" time="0"/>
+    <Property name="PROP_LST_DecodeUnreachableStates" value="False" time="0"/>
     <Property name="PROP_LST_DisableDistRam" value="False" time="0"/>
     <Property name="PROP_LST_EBRUtil" value="100" time="0"/>
     <Property name="PROP_LST_EdfFrequency" value="200" time="0"/>
@@ -193,6 +198,7 @@
     <Property name="PROP_TIM_TimSimGenPUR" value="True" time="0"/>
     <Property name="PROP_TIM_TimSimGenX" value="False" time="0"/>
     <Property name="PROP_TIM_TimSimHierSep" value="" time="0"/>
+    <Property name="PROP_TIM_TransportModeOfPathDelay" value="False" time="0"/>
     <Property name="PROP_TIM_TrgtSpeedGrade" value="" time="0"/>
     <Property name="PROP_TIM_WriteVerboseNetlist" value="False" time="0"/>
 </Strategy>
